--- a/rust-task-2/kattis_template/Cargo.toml
+++ b/rust-task-2/kattis_template/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "kattis_template"
 version = "0.1.0"
-authors = ["violaso"]
+authors = ["Viola Söderlund <violaso@kth.se>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
