--- a/rust-task-2/minimal_scalar_product/Cargo.toml
+++ b/rust-task-2/minimal_scalar_product/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "minimal_scalar_product"
 version = "0.1.0"
-authors = ["Genius"]
+authors = ["Viola Söderlund <violaso@kth.se>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
