--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 /*/target/
 /*/*/target/
 
+# DEMOS
+/demo.rs
+/*/demo.rs
+
 # The library shouldn't decide about the exact versions of 
 # its dependencies, but let the downstream crate decide.
 /*/Cargo.lock
