--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,20 @@
 # Generated files
 /*/target/
 /*/*/target/
+/*/*/*/target
+/*/*.exe
+/*/*/*.exe
+/*/*/*/*.exe
 
 # DEMOS
 /demo.rs
 /*/demo.rs
 
+# Unfinished
+rust-task-7/
+
 # The library shouldn't decide about the exact versions of 
 # its dependencies, but let the downstream crate decide.
 /*/Cargo.lock
 /*/*/Cargo.lock
+/*/*/*/Cargo.lock
